hphp/hack/test/enum_atom/typing/fully_qualified.bad.php.exp
File "fully_qualified.bad.php", line 10, characters 8-8:
Unbound name: `F` (an object type) (Naming[2049])
File "fully_qualified.bad.php", line 9, characters 8-8:
Unknown constant B in E (Typing[4394])
